k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: eks-workshop
spec:
  selector:
    app: web-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
